--- a/src/pages/S1VisionVFPage.page
+++ b/src/pages/S1VisionVFPage.page
@@ -10,39 +10,8 @@
     }
 
     function handleMessage(evt) {
-        //var data = JSON.parse(evt.data);
-        console.log('event is ', evt);
-        getCallVisionBase64(evt);
-    }
-
-    function getCallVisionBase64(evt) {
         iframeEvent = evt;
         submitFile(evt.data);
-        /*
-        Visualforce.remoting.Manager.invokeAction(
-            'S1VisionComponentController.getCallVisionBase64', evt.data,
-            function(result, event) {
-                var retResult = '';
-                if (!!result && event.status) {
-                    retResult = result;
-                    console.log('Predictions is ', result);
-
-                } else {
-                    console.log('Error is', event.message);
-                    retResult = event.message;
-                }
-                try {
-                    console.log('starting event')
-                    evt.source.postMessage(retResult, "*");
-                } catch (e) {
-                    console.log('Exception ..', e)
-                }
-
-
-            }, {
-                escape: false
-            });
-        */
     }
 
     function postResult(pr){
@@ -52,8 +21,8 @@
 
     </script>
     <apex:form >
-        <apex:actionFunction name="submitFile" action="{!getCallVisionBase64VF}" oncomplete="postResult('{!predictionsResult}')">
-            <apex:param name="fileData" value="" assignTo="{!fileData}" />
+        <apex:actionFunction name="submitFile" action="{!getCallVisionBase64VF}" oncomplete="postResult('{!returnDataString}')">
+            <apex:param name="imageDataJSON" value="" assignTo="{!imageDataJSON}" />
         </apex:actionFunction>
     </apex:form>
 </apex:page>
